# hackster-water-level-sensor

./: .gitignore  .gitlint  .markdownlint.yaml  .mdformat.toml  .pre-commit-config.yaml  .yamlignore  .yamllint.yaml  CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  REUSE.toml  VERSION  overlay-golioth-logging.conf  overlay-golioth-runtime-psk.conf  overlay-rtt-debug.conf  overlay-serial-debug.conf  pm_static.yml  prj.conf  sysbuild.conf  taplo.toml  west-ci-bundle-id.yml  west.yml
.github/: dependabot.yml
.github/workflows/: build-firmware.yml  gitlint.yml  pre-commit.yml  release.yml  version-info.yml
boards/: thingy91x_nrf9151_ns.conf  thingy91x_nrf9151_ns.overlay
hackster_project/: story.md
pipelines/: cbor-to-influxdb.yml
socs/: nrf9151_ns.conf
src/: app_battery.c  app_battery.h  app_rpc.c  app_sensors.c  app_sensors.h  app_settings.c  app_settings.h  main.c  math_constants.h
